Don't modify the currency of a stock account

BUG: 458962